# courseProject3

./: .clang-format  .clang-tidy  .gitignore  ActivationFunction.cpp  ActivationFunction.h  AnyObject.h  CAnyLayer.h  CMakeLists.txt  CustomTypes.h  GivensLayer.cpp  GivensLayer.h  GivensNet.cpp  GivensNet.h  HouseholderLayer.cpp  HouseholderLayer.h  LossFunction.cpp  LossFunction.h  MatrixLayer.cpp  MatrixLayer.h  Net.cpp  Net.h  README.md  Random.cpp  Random.h  TestOperations.cpp  TestOperations.h  VectorOperations.cpp  VectorOperations.h  exception.cpp  exception.h  main.cpp  test.cpp  test.h
tests/: GivensLayerTest.cpp  Test.cpp
